ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
    rules:
    - host: myapp.example.com
      http:
        paths:
        - path: /crate-demo
          pathType: Prefix
          backend:
            service:
              name: myapp-service
              port:
                number: 80
    ingressClassName: "nginx"  
    tls:
    - hosts:
      - myapp.example.com
      secretName: myapp-tls-secret
